--- a/confix.glade
+++ b/confix.glade
@@ -1816,7 +1816,7 @@ Eg: 123 (Monday, Tuesday, Wednesday)</property>
                                       </object>
                                     </child>
                                     <child type="label">
-                                      <object class="GtkLabel">
+                                      <object class="GtkLabel" id="user_summary_label">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
                                         <property name="label" translatable="yes">Mac Addresses</property>
