Allow users to export groups as unverified

--- a/groups_manager.glade
+++ b/groups_manager.glade
@@ -116,6 +116,20 @@
                 <property name="position">3</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Export to Repository</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="action_export_repository" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">4</property>
+              </packing>
+            </child>
           </object>
           <packing>
             <property name="left_attach">0</property>
@@ -197,7 +211,7 @@
           <object class="GtkLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">TreeView</property>
+            <property name="label" translatable="yes">Groups</property>
           </object>
           <packing>
             <property name="left_attach">1</property>
@@ -208,7 +222,7 @@
           <object class="GtkLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">TextView</property>
+            <property name="label" translatable="yes">Domains</property>
           </object>
           <packing>
             <property name="left_attach">2</property>
